--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "chart.js": "^3.5.1",
     "chartjs-adapter-moment": "^1.0.1",
     "chartjs-node-canvas": "^4.1.6",
+    "dotenv": "^16.3.1",
     "fastify": "^4.24.3",
     "moment": "^2.29.4"
   },
   "devDependencies": {
-    "@types/node": "^20.9.2",
-    "typescript": "^5.2.2"
+    "@types/node": "^20.9.4",
+    "typescript": "^5.3.2"
   }
 }
