--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Syorito Hatsuki",
   "license": "MIT",
   "dependencies": {
+    "@fastify/caching": "^8.3.0",
     "axios": "^1.6.2",
     "chart.js": "^3.5.1",
     "chartjs-adapter-moment": "^1.0.1",
