--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "chartjs-node-canvas": "^4.1.6",
     "dotenv": "^16.3.1",
     "fastify": "^4.24.3",
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "svg2img": "^1.0.0-beta.2"
   },
   "devDependencies": {
     "@types/node": "^20.9.4",
