--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fstats-image-generator",
-  "version": "2023.11.1",
+  "version": "2024.12.1",
   "description": "Image generator for fStats",
   "main": "index.js",
   "type": "commonjs",
@@ -12,18 +12,20 @@
   "author": "Syorito Hatsuki",
   "license": "MIT",
   "dependencies": {
-    "@fastify/caching": "^8.3.0",
-    "axios": "^1.6.2",
+    "@fastify/caching": "^9.0.2",
+    "@fastify/swagger": "^9.4.0",
+    "@fastify/swagger-ui": "^5.2.0",
+    "axios": "^1.7.9",
     "chart.js": "^3.5.1",
     "chartjs-adapter-moment": "^1.0.1",
     "chartjs-node-canvas": "^4.1.6",
-    "dotenv": "^16.3.1",
-    "fastify": "^4.24.3",
-    "moment": "^2.29.4",
+    "dotenv": "^16.4.7",
+    "fastify": "^5.2.0",
+    "moment": "^2.30.1",
     "svg2img": "^1.0.0-beta.2"
   },
   "devDependencies": {
-    "@types/node": "^20.9.4",
-    "typescript": "^5.3.2"
+    "@types/node": "^22.10.2",
+    "typescript": "^5.7.2"
   }
 }
