--- a/package.json
+++ b/package.json
@@ -7,25 +7,27 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "start": "tsc -p tsconfig.json && node ./dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "docker:build": "ts-node docker-utils.ts"
   },
   "author": "Syorito Hatsuki",
   "license": "MIT",
   "dependencies": {
-    "@fastify/caching": "^9.0.2",
-    "@fastify/swagger": "^9.4.0",
-    "@fastify/swagger-ui": "^5.2.0",
+    "@fastify/caching": "^9.0.3",
+    "@fastify/swagger": "^9.4.2",
+    "@fastify/swagger-ui": "^5.2.1",
     "axios": "^1.7.9",
-    "chart.js": "^3.5.1",
+    "chart.js": "^3.9.1",
     "chartjs-adapter-moment": "^1.0.1",
     "chartjs-node-canvas": "^4.1.6",
     "dotenv": "^16.4.7",
-    "fastify": "^5.2.0",
+    "fastify": "^5.2.1",
     "moment": "^2.30.1",
     "svg2img": "^1.0.0-beta.2"
   },
   "devDependencies": {
-    "@types/node": "^22.10.2",
-    "typescript": "^5.7.2"
+    "ts-node": "^10.9.2",
+    "@types/node": "^22.13.1",
+    "typescript": "^5.7.3"
   }
 }
