--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -p tsconfig.json",
     "start": "tsc -p tsconfig.json && node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "docker:build": "ts-node docker-utils.ts"
+    "docker:build": "node docker-utils.mjs"
   },
   "author": "Syorito Hatsuki",
   "license": "MIT",
@@ -23,10 +23,9 @@
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
     "moment": "^2.30.1",
-    "svg2img": "^1.0.0-beta.2"
+    "svg2img": "^0.9.4"
   },
   "devDependencies": {
-    "ts-node": "^10.9.2",
     "@types/node": "^22.13.1",
     "typescript": "^5.7.3"
   }
