Added redis caching

--- a/package.json
+++ b/package.json
@@ -13,18 +13,16 @@
   "author": "Syorito Hatsuki",
   "license": "MIT",
   "dependencies": {
-    "@babel/runtime-corejs3": "^7.26.10",
     "@fastify/caching": "^9.0.3",
+    "@fastify/redis": "^7.0.2",
     "@fastify/swagger": "^9.4.2",
     "@fastify/swagger-ui": "^5.2.2",
     "@resvg/resvg-js": "^2.6.2",
     "@types/node": "^22.13.1",
     "axios": "^1.8.3",
-    "canvg": "^4.0.3",
     "chart.js": "^3.9.1",
     "chartjs-adapter-moment": "^1.0.1",
     "chartjs-node-canvas": "^4.1.6",
-    "cross-spawn": "^7.0.6",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
     "moment": "^2.30.1",
